--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>Brief Survey of Wizarding World</h1> 
   <div>
   <ol type="1">
-      <li style="color:darkorchid"><u>Characters</u><</li>
+      <li style="color:darkorchid"><u>Characters</u></li>
       <ul type="None">
           <li style="color:darkorchid"><a href="#one"><u>Students</u></a></li>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, optio, nulla. Enim explicabo, tenetur quasi odio rem aperiam vel doloremque deserunt culpa consectetur voluptatem autem, earum labore iste odit reiciendis aliquid corporis, dicta cumque eligendi ipsa sunt ipsum. Fugiat, impedit!</p>
